updated styling to list cards diagonally, with equal spacing and fixed size

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,15 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
+  box-sizing: border-box;
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2em;
+
+  height: 180px;
 }
 
 img {
@@ -10,6 +20,19 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin: 24px auto;
+
+  text-align: center;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+
+  flex: initial;
+  gap: 16px;
 }
 
 /* do not edit this footer */
